--- a/games.html
+++ b/games.html
@@ -5,19 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coolom Games | Our Games</title>
-  <link rel="stylesheet" href="/css/games.css">
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="css/games.css">
+  <link rel="stylesheet" href="css/global.css">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link rel="icon" href="resources/img/coolom_games/logo/logo_blanco.png" type="image/png">
 </head>
 
 <body>
   <nav>
     <div class="navegador">
-      <a href="home.html" class="logo-link">
+      <a href="index.html" class="logo-link">
         <div class="logo-nav">
           <img src="resources/img/coolom_games/logo/logo_color.png" alt="Logo Coolom C">
           <h1>COOLOM GAMES</h1>
@@ -39,7 +37,6 @@
   </nav>
 
   <main class="games-main">
-    <!-- Hero Section -->
     <section class="games-hero">
       <div class="games-hero-content">
         <img src="resources/img/coolom_games/logo/logo_color.png" alt="Decoration" class="hero-decoration">
@@ -48,11 +45,9 @@
       </div>
     </section>
 
-    <!-- Games Grid -->
     <section class="games-grid-section">
       <div class="games-list">
-        
-        <!-- Dating Killmulator -->
+
         <div class="game-item">
           <div class="game-image-wrapper">
             <img src="resources/img/dating_killmulator/landing_page/dating_lp_img.png" alt="Dating Killmulator">
@@ -64,7 +59,6 @@
           </div>
         </div>
 
-        <!-- Patufet -->
         <div class="game-item reverse">
           <div class="game-image-wrapper">
             <img src="resources/img/patufet/landing_page/patufet_lp_img.png" alt="Patufet">
@@ -75,7 +69,6 @@
           </div>
         </div>
 
-        <!-- Midlander -->
         <div class="game-item">
           <div class="game-image-wrapper">
             <img src="resources/img/midlander/landing_page/midlander_lp_img.png" alt="Midlander">
@@ -90,7 +83,6 @@
       </div>
     </section>
 
-    <!-- Merch Button -->
     <section class="merch-button-section">
       <a href="merch.html" class="merch-button">Buy Merch!</a>
     </section>
@@ -116,7 +108,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <h3>Quick Links</h3>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="about.html">About</a>
         <a href="merch.html">Merch</a>
@@ -130,7 +122,7 @@
           <a href="https://www.tiktok.com/@coolomgames" target="_blank" title="TikTok">
             <img src="resources/img/coolom_games/xarxes_socials/tiktok_logo.png" alt="Tiktok">
           </a>
-          <a href="https://x.com/CoolomGames" target="_blank" title="X (Twitter)">
+          <a href="https://x.com/CoolomGames" target="_blank" title="X">
             <img src="resources/img/coolom_games/xarxes_socials/x_logo.png" alt="X">
           </a>
           <a href="https://www.youtube.com/@CoolomGames" target="_blank" title="YouTube">
