--- a/about.html
+++ b/about.html
@@ -5,19 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coolom Games | About Us</title>
-  <link rel="stylesheet" href="/css/about.css">
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/global.css">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link rel="icon" href="resources/img/coolom_games/logo/logo_blanco.png" type="image/png">
 </head>
 
 <body>
   <nav>
     <div class="navegador">
-      <a href="home.html" class="logo-link">
+      <a href="index.html" class="logo-link">
         <div class="logo-nav">
           <img src="resources/img/coolom_games/logo/logo_color.png" alt="Logo Coolom C">
           <h1>COOLOM GAMES</h1>
@@ -25,22 +23,20 @@
       </a>
 
       <div class="botones-nav">
-      <a href="games.html"><button>Games</button></a>
-      <a href="about.html"><button style="color: #004b97; font-weight: 900;">About</button></a>
-      <a href="contact.html"><button>Contact</button></a>
-      <a href="blog.html"><button>Blog</button></a> 
-      <a href="https://datingkillmulator.store/" target="_blank"><button style="cursor: pointer;">Merch</button></a>
-
+        <a href="games.html"><button>Games</button></a>
+        <a href="about.html"><button style="color: #004b97; font-weight: 900;">About</button></a>
+        <a href="contact.html"><button>Contact</button></a>
+        <a href="blog.html"><button>Blog</button></a>
+        <a href="https://datingkillmulator.store/" target="_blank"><button style="cursor: pointer;">Merch</button></a>
       </div>
     </div>
 
-<div class="banner-wrap">
+    <div class="banner-wrap">
       <img src="resources/img/coolom_games/navegador/banner.svg" class="banner-nav">
     </div>
   </nav>
 
   <main class="about-main">
-    <!-- Hero Section -->
     <section class="about-hero">
       <div class="about-hero-content">
         <h1>Who is Coolom Games</h1>
@@ -48,7 +44,6 @@
       </div>
     </section>
 
-    <!-- Story Timeline -->
     <section class="story-section">
       <div class="story-container">
         <div class="story-item">
@@ -77,11 +72,10 @@
       </div>
     </section>
 
-    <!-- Achievements -->
     <section class="achievements-section">
       <h2 class="section-title">Achievements</h2>
       <p class="section-subtitle">In our journey, we've been honored with recognition that motivates us to keep creating meaningful experiences.</p>
-      
+
       <div class="achievements-grid">
         <div class="achievement-card">
           <div class="achievement-icon">
@@ -107,13 +101,11 @@
       </div>
     </section>
 
-    <!-- Team Section -->
     <section class="team-section">
       <h2 class="section-title">Our Team</h2>
       <p class="section-subtitle">Meet the creative minds behind Coolom Games. We're a diverse group of developers, artists, and storytellers united by our love for games.</p>
-      
+
       <div class="team-grid">
-        <!-- Team Member 1 -->
         <div class="team-card">
           <div class="team-image-container">
             <img src="resources/img/coolom_games/pigeons/UnaiPigeon.png" alt="Unai Estavillo" class="team-image">
@@ -126,7 +118,6 @@
           </div>
         </div>
 
-        <!-- Team Member 2 -->
         <div class="team-card">
           <div class="team-image-container">
             <img src="resources/img/coolom_games/pigeons/NuriaPigeon.png" alt="Núria Antonell" class="team-image">
@@ -139,7 +130,6 @@
           </div>
         </div>
 
-        <!-- Team Member 3 -->
         <div class="team-card">
           <div class="team-image-container">
             <img src="resources/img/coolom_games/pigeons/MorsaPigeon.png" alt="Morsa" class="team-image">
@@ -152,7 +142,6 @@
           </div>
         </div>
 
-        <!-- Placeholder for future team members -->
         <div class="team-card team-card-empty">
           <div class="team-image-container">
             <div class="team-placeholder">?</div>
@@ -186,7 +175,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <h3>Quick Links</h3>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="about.html">About</a>
         <a href="merch.html">Merch</a>
@@ -200,7 +189,7 @@
           <a href="https://www.tiktok.com/@coolomgames" target="_blank" title="TikTok">
             <img src="resources/img/coolom_games/xarxes_socials/tiktok_logo.png" alt="Tiktok">
           </a>
-          <a href="https://x.com/CoolomGames" target="_blank" title="X (Twitter)">
+          <a href="https://x.com/CoolomGames" target="_blank" title="X">
             <img src="resources/img/coolom_games/xarxes_socials/x_logo.png" alt="X">
           </a>
           <a href="https://www.youtube.com/@CoolomGames" target="_blank" title="YouTube">
