--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coolom Games | Contact</title>
-  
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/css/contact.css">
-  
+
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/contact.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-  <link rel="icon" href="resources\img\coolom_games\logo\logo_blanco.png" type="image/png">
+  <link rel="icon" href="resources/img/coolom_games/logo/logo_blanco.png" type="image/png">
 </head>
 
 <body>
   <nav>
     <div class="navegador">
-      <a href="home.html" class="logo-link">
+      <a href="index.html" class="logo-link">
         <div class="logo-nav">
           <img src="resources/img/coolom_games/logo/logo_color.png" alt="Logo Coolom C">
           <h1>COOLOM GAMES</h1>
@@ -45,7 +45,7 @@
     <p class="contact-intro">Have a question about our games, press inquiries, or just want to say hi? Fill out the form below or send us an email directly!</p>
 
     <div class="contact-content-wrapper">
-      
+
       <form class="contact-form" action="#" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
@@ -83,7 +83,7 @@
         <div class="info-item socials-info">
           <h3>Find us on Socials</h3>
           <div class="mini-socials">
-             <p>@CoolomGames</p>
+            <p>@CoolomGames</p>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <h3>Quick Links</h3>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="about.html">About</a>
         <a href="merch.html">Merch</a>
@@ -142,7 +142,8 @@
       <p>© 2025 Coolom Games. All rights reserved.</p>
     </div>
   </footer>
-  
-  <script src="js\home.js"></script>
+
+  <script src="js/home.js"></script>
 </body>
+
 </html>
