--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
         <a href="about.html"><button data-text="About">About</button></a>
         <a href="contact.html"><button data-text="Contact">Contact</button></a>
         <a href="blog.html"><button data-text="Blog">Blog</button></a>
-        <a href="merch.html"><button data-text="Merch">Merch</button></a>
+        <a href="https://datingkillmulator.store/" target="_blank"><button style="cursor: pointer;">Merch</button></a>
       </div>
     </div>
 
@@ -143,4 +143,5 @@
 </body>
 
 </html>
+
 
